Add open-pull-requests-limit to dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,7 @@
 
 version: 2
 updates:
+  - open-pull-requests-limit: 10
   - package-ecosystem: "maven"
     directory: "/auction-house-backend/"
     schedule:
